--- a/wr.cabal
+++ b/wr.cabal
@@ -47,6 +47,7 @@ library
     , base >=4.7 && <5
     , binary
     , bytestring
+    , data-binary-ieee754
     , hspec
   default-language: Haskell2010
 
@@ -63,6 +64,7 @@ executable wr-exe
     , base >=4.7 && <5
     , binary
     , bytestring
+    , data-binary-ieee754
     , hspec
     , wr
   default-language: Haskell2010
@@ -81,6 +83,7 @@ test-suite wr-test
     , base >=4.7 && <5
     , binary
     , bytestring
+    , data-binary-ieee754
     , hspec
     , wr
   default-language: Haskell2010
